# fluid-simulation

./: .gitignore  Cargo.toml  README.md  TODO.md  index.html
assets/shaders/: fluid_sim.wgsl
src/: config.rs  lib.rs  main.rs  particle.rs  spawner.rs  starfield-shader.glsl
src/plugins/: mod.rs  physics.rs  physics_gpu.rs  spawner.rs  transform.rs  utils.rs
src/resources/: fluid_buffers.rs  fluid_settings.rs  gradient.rs  mod.rs
