[package]
name = "fluid-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.19.0", features = ["dynamic_linking", "bevy_dev_tools"] }
bevy-inspector-egui = "0.37.0"
chacha20 = "0.10.1"
rand = "0.10.2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
